--- a/charts/matrix-stack/source/element-web.yaml.j2
+++ b/charts/matrix-stack/source/element-web.yaml.j2
@@ -21,6 +21,7 @@ replicas: 1
 {{- sub_schema_values.ingress() -}}
 {{- sub_schema_values.labels() -}}
 {{- sub_schema_values.workloadAnnotations() -}}
+{{- sub_schema_values.extraEnv() -}}
 {{- sub_schema_values.containersSecurityContext() -}}
 {{- sub_schema_values.nodeSelector() -}}
 {{- sub_schema_values.podSecurityContext(user_id='10004', group_id='10004') -}}
