--- a/charts/matrix-stack/source/element-web.yaml.j2
+++ b/charts/matrix-stack/source/element-web.yaml.j2
@@ -9,11 +9,12 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 enabled: true
 
-## Arbitrary extra config to inject into Element Web's config.json a JSON string
+## Arbitrary extra config to inject into Element Web's config.json.
+## Each key under additional is an additional config to merge into Element Web's config.json.
 ##
 ## Full details on available configuration options can be found at https://github.com/element-hq/element-web/blob/develop/docs/config.md
 ## Most settings are configurable but some settings are owned by the chart and can't be overwritten
-additional: "{}"
+additional: {}
 
 # Number of Element Web replicas to start up
 replicas: 1
