--- a/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
@@ -165,9 +165,9 @@ imagePullSecrets: []
 {%- else %}
   service: {}
 {%- endif %}
-  ## If set, some tweaks will be applied automatically to ingresses based on the type here.
+  ## If set, some tweaks will be applied automatically to ingresses based on the controller type here.
   ## This can be set to `kubernetes-nginx`.
-  # type:
+  # controllerType:
 {%- endmacro %}
 
 {% macro labels(global=false, key='labels') %}
