kubernetes-nginx -> ingress-nginx

--- a/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
@@ -166,7 +166,7 @@ imagePullSecrets: []
   service: {}
 {%- endif %}
   ## If set, some tweaks will be applied automatically to ingresses based on the controller type here.
-  ## This can be set to `kubernetes-nginx`.
+  ## This can be set to `ingress-nginx`.
   # controllerType:
 {%- endmacro %}
 
