wip appservices as secrets

--- a/charts/matrix-stack/source/synapse.yaml.j2
+++ b/charts/matrix-stack/source/synapse.yaml.j2
@@ -37,6 +37,8 @@ media:
 ## e.g.
 ## appservices:
 ## - registrationFileConfigMap: test-appservice
+## - secret: test-appservice
+##   secretKey: registration.yaml
 appservices: []
 
 ## Additional Synapse processes managed by this chart
