--- a/charts/matrix-stack/source/synapse.yaml.j2
+++ b/charts/matrix-stack/source/synapse.yaml.j2
@@ -36,7 +36,8 @@ media:
 ## Details of Application Service registration files to give to Synapse
 ## e.g.
 ## appservices:
-## - registrationFileConfigMap: test-appservice
+## - configMap: test-appservice
+##   configMapKey: registration.yaml
 ## - secret: test-appservice
 ##   secretKey: registration.yaml
 appservices: []
