charts: init values for elementCall

--- a/charts/matrix-stack/source/values.yaml.j2
+++ b/charts/matrix-stack/source/values.yaml.j2
@@ -13,6 +13,10 @@ initSecrets:
   {% macro initSecrestValues() %}{% include 'init-secrets.yaml.j2'%}{% endmacro %}
   {{- initSecrestValues() | trim | indent(2) }}
 
+elementCall:
+  {% macro elementCallValues() %}{% include 'element-call.yaml.j2'%}{% endmacro %}
+  {{- elementCallValues() | trim | indent(2) }}
+
 elementWeb:
   {% macro elementWebValues() %}{% include 'element-web.yaml.j2'%}{% endmacro %}
   {{- elementWebValues() | trim | indent(2) }}
