elementCall: deploy exposedServices

--- a/charts/matrix-stack/source/element-call.yaml.j2
+++ b/charts/matrix-stack/source/element-call.yaml.j2
@@ -46,11 +46,12 @@ sfu:
   hostNetwork: false
   exposedServices:
     {{- sub_schema_values.exposedServicePort('rtcTcp', 30881, 'NodePort') | indent(4) }}
-    {{- sub_schema_values.exposedServicePort('rtcUdp', 30882, 'NodePort') | indent(4) }}
-    {{- sub_schema_values.exposedServicePortRange('rtcMuxedUdp', 31000, 32000, 'NodePort') | indent(4) }}
+    {{- sub_schema_values.exposedServicePort('rtcMuxedUdp', 30882, 'NodePort') | indent(4) }}
+    {{- sub_schema_values.exposedServicePortRange('rtcUdp', 31000, 32000, 'NodePort') | indent(4) }}
 
 
 {{- sub_schema_values.image(registry='docker.io', repository='livekit/livekit-server', tag='v1.7.2') | indent(2) }}
+{{- sub_schema_values.extraEnv() | indent(2) }}
 {{- sub_schema_values.labels() | indent(2) }}
 {{- sub_schema_values.workloadAnnotations() | indent(2) }}
 {{- sub_schema_values.containersSecurityContext() | indent(2) }}
