--- a/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
+++ b/charts/matrix-stack/source/common/sub_schema_values.yaml.j2
@@ -362,6 +362,7 @@ labels: {}
 
 {% macro exposedServicePort(name, port, portType='NodePort') %}
 {{ name }}:
+  enabled: true
   # Either a NodePort or a HostPort
   portType: {{ portType }}
   port: {{ port }}
