name setting preMigrationSynapseHandlesAuth

--- a/charts/matrix-stack/source/matrixAuthenticationService.yaml.j2
+++ b/charts/matrix-stack/source/matrixAuthenticationService.yaml.j2
@@ -9,8 +9,10 @@ enabled: true
 {{- sub_schema_values.image(registry='ghcr.io', repository='element-hq/matrix-authentication-service', tag='0.14.0') }}
 
 ## Force the authentication to happen with legacy authentication.
-## Use this while migrating from legacy authentication.
-keepAuthOnSynapse: false
+## This can be used to deploy Matrix Authentication Service and keeping auth on Synapse.
+## Once MAS is deployed, you can run the syn2mas tool to migrate the data from Synapse to MAS.
+## This should be set back to false and never switch again after the migration to MAS has been run.
+preMigrationSynapseHandlesAuth: false
 
 {{ sub_schema_values.postgresLibPQ() }}
 
